<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android famous Quotes</string>
    <string name="refresh_button_label">Refresh</string>
    <string name="settings_button_label">Settings</string>
    <string name="share_button_label">Share</string>
    <string name="about_button_label">About</string>
    <string name="bookmark_button_label">Bookmark</string>
    <string name="about_text"> \ This is an Android <i><b>famous</b></i> quote client.</string>
    <string name="about_dialog_title">About Android famous quotes.</string>
    <string name="settings_screen_title">Settings</string>
    <string name="share_label_vkontakte">VKontakte</string>
    <string name="share_label_facebook">Facebook</string>
    <string name="share_label_twitter">Twitter</string>
    <string name="share_label_sms">SMS/Email</string>
    <string name="share_with_dialog_title">Share with:</string>
    <string name="settings_screen_label">Settings</string>
    <string name="sound_settings_title">Sound</string>
    <string name="sound_settings_summary">Play sound when quote updated.</string>
    <string name="vibro_settings_title">Use vibro</string>
    <string name="notify_settings_title">Use notification area.</string>
    <string name="notify_settings_summary">Add quote to notification area when it updated.</string>
    <string name="vibro_settings_summary">Make vibration when quote is updated.</string>
    <string name="system_settings_category">System settings</string>
    <string name="service_settings_category">Service settings</string>
    <string name="laguage_list_summary">Set interface and quotes language,</string>
    <string name="language_list_title">Language</string>
    <string name="language_list_dialog_title">Choose language</string>
    <string name="theme_list_title">Theme</string>
    <string name="theme_list_summary">Setuo current programm theme.</string>
</resources>
