<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"	>    
	<TableRow
		android:gravity = "right">
		<Button
		android:id = "@+id/bookmark_button"
		android:text = "@string/bookmark_button_label"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"	/>
	</TableRow>
	
	<TableRow
		android:layout_weight = "1"
		android:gravity = "center"
		android:layout_span = "4">
		<TextView
			android:id = "@+id/quote_view"	
			android:text = "Sample quote text"	/>
	</TableRow>
	
	<TableRow
		android:gravity = "center_horizontal"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content" >
		<ImageButton
			android:id = "@+id/settings_button"			
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:src = "@drawable/settings_button"
			android:background = "#00000000"	/>
		<Button
			android:id = "@+id/share_button"
			android:text = "@string/share_button_label"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"	/>
		<Button
			android:id = "@+id/refresh_button"
			android:text = "@string/refresh_button_label"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"	/>
		<Button
			android:id = "@+id/about_button"	
			android:text = "@string/about_button_label"
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"	/>					
	</TableRow>
</TableLayout>

